commit de prueba desde VS code

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                             <div class="card-body p-sm-5">
                                 <h2 id="contactanos" class="text-center mb-4">CONTÁCTANOS</h2>
                                 <form method="post">
-                                    <div class="mb-3"><input class="form-control" type="text" id="name-2" name="name" placeholder="Nombre" style="--bs-body-bg: var(--bs-body-color);"></div>
-                                    <div class="mb-3"><input class="form-control" type="email" id="email-2" name="email" placeholder="Correo electrónico" style="--bs-body-bg: var(--bs-body-color);"></div>
-                                    <div class="mb-3"><textarea class="form-control" id="message-2" name="message" rows="6" placeholder="Mensaje" style="--bs-body-bg: var(--bs-body-color);"></textarea></div>
+                                    <div class="mb-3"><input class="form-control" type="text" id="name-2" name="name" placeholder="Nombre" style=" color: black; --bs-body-bg: var(--bs-body-color);"></div>
+                                    <div class="mb-3"><input class="form-control" type="email" id="email-2" name="email" placeholder="Correo electrónico" style=" color: black; --bs-body-bg: var(--bs-body-color);"></div>
+                                    <div class="mb-3"><textarea data-bs-toggle="tooltip" title="Escribenos lo que piensas." class="form-control" id="message-2" name="message" rows="6" placeholder="Mensaje" style=" color: black; --bs-body-bg: var(--bs-body-color);"></textarea></div>
                                     <div><button  id="enviar" class="btn btn-primary d-block w-100" data-bs-toggle="tooltip" type="submit" title="Contactémonos!">Enviar</button></div>
                                 </form>
                             </div>
